--- a/frontend/style.css
+++ b/frontend/style.css
@@ -361,10 +361,10 @@ header .main-nav li a[href="index.html"]:hover,
   height: 100vh;
 }
 
-#splash-screen video {
+#splash-screen img {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* or 'contain' if you want full video without cropping */
+  object-fit: cover; /* or 'contain' if you want full image without cropping */
   object-position: center;
   display: block;
 }
@@ -404,7 +404,7 @@ header .main-nav li a[href="index.html"]:hover,
 
 /* Fix for desktop */
 @media (min-width: 769px) {
-  #splash-screen video {
+  #splash-screen img {
     object-fit: contain;
     background-color: black;
   }
@@ -444,7 +444,7 @@ header .main-nav li a[href="index.html"]:hover,
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    height: 35px;
+    height: 100px;
     width: auto;
   }
 
