--- a/frontend/style.css
+++ b/frontend/style.css
@@ -356,11 +356,16 @@ header .main-nav li a[href="index.html"]:hover,
   z-index: 9999;
   background: black;
   overflow: hidden;
-  transition: opacity 2s ease;
+  transition: opacity 1s ease;
   width: 100vw;
   height: 100vh;
 }
 
+#splash-screen.fade-out {
+  opacity: 0;
+}
+
+#splash-screen video,
 #splash-screen img {
   width: 100%;
   height: 100%;
@@ -404,6 +409,7 @@ header .main-nav li a[href="index.html"]:hover,
 
 /* Fix for desktop */
 @media (min-width: 769px) {
+  #splash-screen video,
   #splash-screen img {
     object-fit: contain;
     background-color: black;
